# hairy-ninja

./: .gitignore  AUTHORS  LICENSE  Makefile.am  README.md  configure.ac
src/: Makefile.am  SDL_svg.h  gtk3-sdl2.c  gtk3-sdl2.h  gtk3_sdl2.ui  main.c  render.c
